--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
 body {
   background-color: whitesmoke !important;
 }
@@ -16,20 +17,20 @@ body {
   animation-fill-mode: both;
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
+  &.slow {
+    -webkit-animation: fadein 2s;
+    /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 2s;
+    /* Firefox < 16 */
+    -ms-animation: fadein 2s;
+    /* Internet Explorer */
+    -o-animation: fadein 2s;
+    /* Opera < 12.1 */
+    animation: fadein 2s;
+    -webkit-transform:translate3d(0,0,0);
+    transform: translate3d(0,0,0);
+  }
 }
-
-.animated.slow {
-  -webkit-animation: fadein 2s;
-  /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 2s;
-  /* Firefox < 16 */
-  -ms-animation: fadein 2s;
-  /* Internet Explorer */
-  -o-animation: fadein 2s;
-  /* Opera < 12.1 */
-  animation: fadein 2s;
-}
-
 
 @keyframes fadein {
   from {
@@ -40,6 +41,7 @@ body {
     opacity: 1;
   }
 }
+
 
 /* Firefox < 16 */
 @-moz-keyframes fadein {
@@ -52,6 +54,7 @@ body {
   }
 }
 
+
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
   from {
@@ -62,6 +65,7 @@ body {
     opacity: 1;
   }
 }
+
 
 /* Internet Explorer */
 @-ms-keyframes fadein {
@@ -74,8 +78,8 @@ body {
   }
 }
 
-@media (print),
-(prefers-reduced-motion: reduce) {
+
+@media (print), (prefers-reduced-motion: reduce) {
   .animated {
     -webkit-animation-duration: 1ms !important;
     animation-duration: 1ms !important;
